Fix canvas empty wrappers styles in dark mode

--- a/Core/Builder/uf-extend/ultimate-builder/assets/sass/canvas/global.sass
+++ b/Core/Builder/uf-extend/ultimate-builder/assets/sass/canvas/global.sass
@@ -43,5 +43,5 @@ img.gjs-plh-image
 .page-module:empty,
 .comp-wrapper:empty,
 .column:empty
-    border: 3px dashed rgba(0,0,0,0.1)
-    background-color: rgba(0,0,0,0.02)
+    border: 3px dashed color-mix(in srgb,currentColor 10%,transparent)
+    background-color: color-mix(in srgb,currentColor 10%,transparent)
